--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["react", "es2015"],
-  "plugins": ["react-hot-loader/babel", "lodash", "transform-object-rest-spread"],
+  "plugins": ["lodash", "transform-object-rest-spread"],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
