--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
 charset = utf-8
 end_of_line = lf
-max_line_length = 125
+indent_size = 2
+indent_style = tab
+max_line_length = 100
 trim_trailing_whitespace = true
-insert_final_newline = true
