--- a/package.json
+++ b/package.json
@@ -1,79 +1,71 @@
 {
-  "name": "react-redux-template",
+  "name": "sap-configurator",
   "version": "1.0.0",
   "description": "React redux starter kit",
   "main": "server.js",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/babel-node server",
+    "start": "node server",
     "dist": "cross-env NODE_ENV=production webpack",
-    "start:dist": "./node_modules/.bin/babel-node server --production",
+    "start:dist": "node server --production",
     "lint:js": "eslint app --ext .js --ext .jsx",
     "lint:js:fix": "eslint app --ext .js --ext .jsx --fix",
-    "lint:css": "./node_modules/stylelint/dist/cli.js app/**/*.css",
-    "lint": "npm run lint:js && npm run lint:css",
-    "test": "jest",
-    "test:watch": "npm test -- --watch",
-    "test:cov": "npm test -- --coverage",
-    "precommit": "npm run lint"
+    "lint:css": "./node_modules/stylelint/dist/cli.js app/containers/**/*.css app/components/**/*.css",
+    "lint": "npm run lint:js && npm run lint:css"
   },
-  "author": "Steven Van Eenoo",
-  "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-jest": "^17.0.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-lodash": "^3.2.9",
-    "babel-plugin-transform-object-rest-spread": "^6.19.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "clean-webpack-plugin": "^0.1.14",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.0",
-    "eslint": "^3.10.2",
-    "eslint-config-dlw": "^1.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.7.1",
+  "author": "Delaware Consulting",
+  "dependencies": {
+    "autoprefixer": "^6.3.7",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-lodash": "^3.2.8",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "clean-webpack-plugin": "^0.1.9",
+    "cross-env": "^3.1.2",
+    "css-loader": "^0.23.1",
+    "es6-promise": "^4.0.5",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-react": "^6.1.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
-    "husky": "^0.11.9",
-    "jest": "^17.0.3",
-    "lodash-webpack-plugin": "^0.10.6",
+    "html-webpack-plugin": "^2.22.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash-webpack-plugin": "^0.10.0",
+    "lodash.sortby": "^4.7.0",
     "morgan": "^1.7.0",
-    "normalize.css": "^5.0.0",
-    "postcss-loader": "^1.1.1",
-    "postcss-reporter": "^2.0.0",
+    "normalize.css": "^4.2.0",
+    "postcss-loader": "^0.10.1",
+    "postcss-reporter": "^1.4.1",
     "proxy-middleware": "^0.15.0",
-    "react-hot-loader": "3.0.0-beta.6",
-    "redux-logger": "^2.7.4",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.6.0",
-    "stylelint-config-standard": "^15.0.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.2",
-    "webpack-merge": "^0.17.0",
-    "yargs": "^6.4.0"
-  },
-  "dependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-actions": "^1.0.0",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "react-select": "^1.0.0-rc.2",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "app/**/*-actions.js",
-      "app/**/*-reducers.js",
-      "app/**/*-selectors.js"
-    ]
+    "reselect": "^2.5.3",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.1.0",
+    "stylelint-config-standard": "^12.0.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.0",
+    "webpack-merge": "^0.14.0",
+    "yargs": "^5.0.0"
   }
 }
