--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "bootstrap-grid": "^2.0.1",
     "clean-webpack-plugin": "^0.1.9",
     "cross-env": "^3.1.2",
     "css-loader": "^0.23.1",
