--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "proxy-middleware": "^0.15.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "react-notify-toast": "^0.1.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-select": "^1.0.0-rc.2",
