--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-notify-toast": "^0.1.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
+    "react-s-alert": "^1.2.2",
     "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
