--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "^2.5.2",
     "react-s-alert": "^1.2.2",
     "react-select": "^1.0.0-rc.2",
+    "react-three-renderer": "^3.0.2",
     "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -66,6 +67,9 @@
     "style-loader": "^0.13.1",
     "stylelint": "^7.1.0",
     "stylelint-config-standard": "^12.0.0",
+    "three": "^0.82.1",
+    "three-mtl-loader": "^1.0.1",
+    "three-obj-loader": "^1.0.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
